--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,21 @@
 [versions]
-agp = "8.3.0-alpha10"
-kotlin = "1.9.20"
+agp = "8.4.0-alpha03"
+kotlin = "1.9.22"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 appcompat = "1.6.1"
-material = "1.10.0"
-material3 = "1.2.0-alpha11"
-compose = "1.6.0-beta01"
+material = "1.11.0"
+material3 = "1.2.0"
+compose = "1.6.1"
 uiautomator = "2.2.0"
-benchmark-macro-junit4 = "1.2.1"
-androidx-benchmark = "1.2.1"
+benchmark-macro-junit4 = "1.2.3"
+androidx-benchmark = "1.2.3"
 runner = "1.5.2"
 atomicfu = "0.23.0"
-benchmark-junit4 = "1.2.1"
-androidx-activity = "1.8.1"
+benchmark-junit4 = "1.2.3"
+androidx-activity = "1.8.2"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
